--- a/deliverables/ocata/keystoneauth.yaml
+++ b/deliverables/ocata/keystoneauth.yaml
@@ -4,38 +4,38 @@ team: keystone
 release-notes: https://docs.openstack.org/releasenotes/keystoneauth/ocata.html
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 releases:
-- version: 2.13.0
-  projects:
-  - repo: openstack/keystoneauth
-    hash: 811cd1f3e18327f5c4560e1d6024bdbc5771c449
-    tarball-base: keystoneauth1
-- version: 2.14.0
-  projects:
-  - repo: openstack/keystoneauth
-    hash: 626886b4aa9d905d4fcbf88e53b59339eb42b568
-    tarball-base: keystoneauth1
-- version: 2.15.0
-  projects:
-  - repo: openstack/keystoneauth
-    hash: 946278d98c1d37998059f4199507835cfcf84879
-    tarball-base: keystoneauth1
-- version: 2.16.0
-  projects:
-  - repo: openstack/keystoneauth
-    hash: 3e2ea6a9ccfb260fc21a7e49b863a5e778c743f1
-    tarball-base: keystoneauth1
-- version: 2.17.0
-  projects:
-  - repo: openstack/keystoneauth
-    hash: 06e0aeb8f1dbb77ce452f732f38381f76229bdbc
-    tarball-base: keystoneauth1
-- version: 2.18.0
-  projects:
-  - repo: openstack/keystoneauth
-    hash: 9365dbeb6d4ffb70d0e2ecf561fadbb3e150b23c
-    tarball-base: keystoneauth1
+  - version: 2.13.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 811cd1f3e18327f5c4560e1d6024bdbc5771c449
+        tarball-base: keystoneauth1
+  - version: 2.14.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 626886b4aa9d905d4fcbf88e53b59339eb42b568
+        tarball-base: keystoneauth1
+  - version: 2.15.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 946278d98c1d37998059f4199507835cfcf84879
+        tarball-base: keystoneauth1
+  - version: 2.16.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 3e2ea6a9ccfb260fc21a7e49b863a5e778c743f1
+        tarball-base: keystoneauth1
+  - version: 2.17.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 06e0aeb8f1dbb77ce452f732f38381f76229bdbc
+        tarball-base: keystoneauth1
+  - version: 2.18.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 9365dbeb6d4ffb70d0e2ecf561fadbb3e150b23c
+        tarball-base: keystoneauth1
 branches:
-- name: stable/ocata
-  location: 2.18.0
+  - name: stable/ocata
+    location: 2.18.0
