--- a/deliverables/ocata/osc-lib.yaml
+++ b/deliverables/ocata/osc-lib.yaml
@@ -4,16 +4,16 @@ team: OpenStackClient
 release-notes: https://docs.openstack.org/releasenotes/osc-lib/ocata.html
 type: library
 release-model: cycle-with-intermediary
-include-pypi-link: true
+include-pypi-link: yes
 branches:
-- name: stable/ocata
-  location: 1.3.0
+  - name: stable/ocata
+    location: 1.3.0
 releases:
-- version: 1.2.0
-  projects:
-  - repo: openstack/osc-lib
-    hash: 5099a55fa6377fba54b477cff7304ddaafa6df78
-- version: 1.3.0
-  projects:
-  - repo: openstack/osc-lib
-    hash: 45be3e1b2c9c054823e25605d54157d36d875ba0
+  - version: 1.2.0
+    projects:
+      - repo: openstack/osc-lib
+        hash: 5099a55fa6377fba54b477cff7304ddaafa6df78
+  - version: 1.3.0
+    projects:
+      - repo: openstack/osc-lib
+        hash: 45be3e1b2c9c054823e25605d54157d36d875ba0
