add edit-deliverable command
Add a new command for making small changes to deliverable files. The
first version knows how to set the release notes URL.

Change-Id: I7b4949d2e93bf6bdfd0080f42a0a3c32a9631750
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ console_scripts =
     propose-final-releases = openstack_releases.cmds.propose_final_releases:main
     make-tracking-pad = openstack_releases.cmds.make_tracking_pad:main
     propose-library-branches = openstack_releases.cmds.propose_library_branches:main
+    edit-deliverable = openstack_releases.cmds.edit_deliverable:main
 
 [extras]
 sphinxext =
